--- a/examples/style.css
+++ b/examples/style.css
@@ -2,13 +2,17 @@ canvas {
     border: 1px solid black;
 }
 
+body{
+    background-color: transparent;
+}
+
 button {
     clear: both;
     display: block;
 }
 
 #content {
-    background: rgba(100, 255, 255, 0.5);
+    background: rgba(100, 255, 255, 0.2);
     padding: 50px 10px;
 }
 
